test/elaboration/good/typeclass_entailment_by_inheritance.mle
class H 'a { h : 'a -> int }
class H 'a => I 'a { i : 'a -> unit }
let ['a] [ I 'a ] (use_h_in_i : 'a -> int) = ['a] fun (x : 'a) -> h['a] x[]