test/elaboration/bad/typeclass_overload_and_local_let_bound.mle
class H 'a { h : 'a -> int }
let (x : int) = let (h : int) = 42 in h[]
